test/good/generators/var01.px

func f(x: String): String... def
    yield x

g = f
print [...g("test")]