test/bad/generators/generic05.px

func f() def
    yield []
    yield

f()
